--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-streamlit
-faiss-cpu
-nltk
-pandas
-numpy
-PyPDF2
-sentence-transformers
-geopy
-folium
-streamlit-folium
-groq
-beautifulsoup4
-requests
-langdetect
+streamlit>=1.34.0
+faiss-cpu>=1.7.4
+nltk>=3.8.1
+pandas>=2.1.0
+numpy>=1.25.0
+PyPDF2>=3.0.1
+sentence-transformers>=2.2.2
+geopy>=2.3.0
+langdetect>=1.0.9
+folium>=0.15.1
+streamlit-folium>=0.14.0
+groq>=0.4.0
+openpyxl>=3.1.2
