--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-streamlit
-pandas
-numpy
-PyPDF2
-sentence-transformers
-geopy
-nltk
-langdetect
-groq
+streamlit==1.32.0
+nltk==3.8.1
+PyPDF2==3.0.1
+sentence-transformers==2.2.2
+faiss-cpu==1.7.4
+pandas==2.0.3
+numpy==1.24.3
+geopy==2.3.0
+folium==0.14.0
+streamlit-folium==0.15.1
+groq==0.3.0
+langdetect==1.0.9
+python-dotenv==1.0.0
