--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-streamlit==1.32.0
-nltk==3.8.1
+streamlit==1.28.1
+pandas==2.1.3
 PyPDF2==3.0.1
 sentence-transformers==2.2.2
 faiss-cpu==1.7.4
-pandas==2.0.3
-numpy==1.24.3
-geopy==2.3.0
-folium==0.14.0
-streamlit-folium==0.15.1
-groq==0.3.0
+folium==0.15.0
+streamlit-folium==0.15.0
 langdetect==1.0.9
-python-dotenv==1.0.0
-thefuzz==0.22.1
-rapidfuzz==3.13.0
+groq==0.4.1
+numpy==1.24.3
+scikit-learn==1.3.2
+torch==2.1.1
+transformers==4.36.2
+openpyxl==3.1.2
+xlrd==2.0.1
+pickle5==0.0.12
+regex==2023.10.3
