--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,11 +1,18 @@
-[theme]
-primaryColor = "#1abc9c"
-backgroundColor = "#fdfdfd"
-secondaryBackgroundColor = "#ecf0f1"
-textColor = "#2c3e50"
-font = "sans serif"
+[global]
+developmentMode = false
 
 [server]
-headless = true
+runOnSave = true
 port = 8501
 enableCORS = false
+enableXsrfProtection = false
+
+[browser]
+gatherUsageStats = false
+
+[theme]
+primaryColor = "#FF6B6B"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
+font = "sans serif"
