--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,12 @@
-streamlit==1.28.1
-pandas==2.1.3
-PyPDF2==3.0.1
-sentence-transformers==2.2.2
-faiss-cpu==1.7.4
-folium==0.15.0
-streamlit-folium==0.15.0
-langdetect==1.0.9
-groq==0.4.1
-numpy==1.24.3
-scikit-learn==1.3.2
-torch==2.1.1
-transformers==4.36.2
-openpyxl==3.1.2
-xlrd==2.0.1
-pickle5==0.0.12
-regex==2023.10.3
+streamlit
+pandas
+numpy
+PyPDF2
+sentence-transformers
+geopy
+folium
+streamlit-folium
+groq
+langdetect
+nltk
+faiss-cpu
